<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gmail.remarkable.development.goodnapp.DayViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPaddingBottom="@dimen/padding_card_content"
        app:contentPaddingLeft="@dimen/padding_card_content"
        app:contentPaddingRight="@dimen/padding_card_content"
        app:contentPaddingTop="@dimen/padding_card_content_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/sleepTimes_label_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/sleep_times_label"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_nap_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.addAwake()}"
                android:text="@string/awake"
                app:awakeButtonEnable="@{viewModel.mLiveSleepDay}"
                app:layout_constraintEnd_toEndOf="@+id/night_sleep_container"
                app:layout_constraintStart_toStartOf="@+id/night_sleep_container"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/day_sleep_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/day_sleep_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/night_sleep_container"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total_sleep_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/day_sleep_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:inputType="time"
                    android:text="@{viewModel.targetBedtimeString}"
                    android:textAlignment="center"
                    tools:text="@string/sample_awake_time" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/night_sleep_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/night_sleep_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/day_sleep_container"
                app:layout_constraintTop_toTopOf="@+id/day_sleep_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/night_sleep_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:inputType="time"
                    android:text="@{viewModel.realTWTString}"
                    android:textAlignment="center"
                    tools:text="@string/sample_awake_time" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/total_sleep_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/total_sleep_label"
                app:layout_constraintEnd_toEndOf="@+id/day_sleep_container"
                app:layout_constraintStart_toStartOf="@+id/day_sleep_container"
                app:layout_constraintTop_toBottomOf="@+id/sleepTimes_label_textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/total_sleep_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:inputType="time"
                    android:text="@{viewModel.realTWTString}"
                    android:textAlignment="center"
                    tools:text="@string/sample_awake_time" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>
