<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gmail.remarkable.development.goodnapp.DayViewModel" />

        <variable
            name="day"
            type="com.gmail.remarkable.development.goodnapp.DayFragment" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPaddingBottom="@dimen/padding_card_content"
        app:contentPaddingLeft="@dimen/padding_card_content"
        app:contentPaddingRight="@dimen/padding_card_content"
        app:contentPaddingTop="@dimen/padding_card_content_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/summary_label_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/bedtime_label"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:drawableStartCompat="@drawable/ic_hotel_black_24dp"
                app:drawableTint="?android:textColorSecondary"
                app:layout_constraintStart_toStartOf="@+id/target_bedtime_container"
                app:layout_constraintTop_toBottomOf="@+id/add_nap_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_nap_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:enabled="@{viewModel.isAllDataValid}"
                android:onClick="@{() -> viewModel.addNap()}"
                android:text="@string/add_nap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/target_bedtime_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/target_hint"
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/real_bedtime_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/summary_label_textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/target_bedtime_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:inputType="time"
                    android:text="@{viewModel.targetBedtimeString}"
                    android:textAlignment="center"
                    tools:text="@string/no_time" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/real_bedtime_container"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/middleBox_margin"
                android:layout_marginEnd="16dp"
                android:hint="@string/real_hint_label"
                app:endIconMode="clear_text"
                app:error="@{viewModel.isRealBedtimeValid()}"
                app:errorIconDrawable="@{null}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/target_bedtime_container"
                app:layout_constraintTop_toTopOf="@+id/target_bedtime_container"
                app:setEndIconOnClickListener="@{() -> viewModel.clearBedtime()}">

                <com.gmail.remarkable.development.goodnapp.CustomTextInputEditText
                    android:id="@+id/real_bedtime_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:inputType="time"
                    android:onClick="@{(v) -> day.pickTime(v)}"
                    android:text="@{viewModel.realBedtimeString}"

                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>
