<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_nap"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPaddingBottom="@dimen/padding_card_content"
    app:contentPaddingLeft="@dimen/padding_card_content"
    app:contentPaddingRight="@dimen/padding_card_content"
    app:contentPaddingTop="@dimen/padding_card_content_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nap_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nap_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="Nap"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete_description"
            android:cropToPadding="false"
            android:padding="8dp"
            android:tint="@android:color/secondary_text_dark_nodisable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete_black_24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/napEnd_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/middleBox_margin"
            android:hint="@string/end"
            app:layout_constraintBottom_toBottomOf="@+id/napStart_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/napStart_container"
            app:layout_constraintTop_toTopOf="@+id/napStart_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nap_end_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/napStart_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/start"
            app:layout_constraintEnd_toStartOf="@+id/napEnd_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nap_start_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
