<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.gmail.remarkable.development.goodnapp.DayViewModel" />

        <variable
            name="day"
            type="com.gmail.remarkable.development.goodnapp.DayFragment" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_day_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="@dimen/padding_card_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/date_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@{viewModel.mLiveSleepDay.date}"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/target_TWT_container"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/target_TWT"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_textView">

                <com.gmail.remarkable.development.goodnapp.CustomTextInputEditText
                    android:id="@+id/target_TWT_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:inputType="time"
                    android:onClick="@{(v) -> day.pickTime(v)}"
                    android:text="@{viewModel.getDurationString(viewModel.mLiveSleepDay.targetTWT)}"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wakeUp_container"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/wake_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/out_of_bed_container"
                app:layout_constraintStart_toStartOf="@+id/target_TWT_container"
                app:layout_constraintTop_toBottomOf="@id/target_TWT_container">

                <com.gmail.remarkable.development.goodnapp.CustomTextInputEditText
                    android:id="@+id/wakeUp_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:inputType="time"
                    android:onClick="@{(v) -> day.pickTime(v)}"
                    android:text="@{viewModel.getTimeStringFromTimestamp(viewModel.mLiveSleepDay.wakeUp)}"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/out_of_bed_container"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/middleBox_margin"
                android:hint="@string/out_of_bed"
                app:error="@{viewModel.isOutOfBedValid}"
                app:layout_constraintBottom_toBottomOf="@id/wakeUp_container"
                app:layout_constraintEnd_toEndOf="@+id/target_TWT_container"
                app:layout_constraintStart_toEndOf="@id/wakeUp_container"
                app:layout_constraintTop_toTopOf="@id/wakeUp_container">

                <com.gmail.remarkable.development.goodnapp.CustomTextInputEditText
                    android:id="@+id/out_of_bed_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:inputType="time"
                    android:onClick="@{(v) -> day.pickTime(v)}"
                    android:text="@{viewModel.getTimeStringFromTimestamp(viewModel.mLiveSleepDay.outOfBed)}"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>